--- a/AdminPage/src/app/recipe-list/recipe-list.component.html
+++ b/AdminPage/src/app/recipe-list/recipe-list.component.html
@@ -1,11 +1,28 @@
-<div class="example-container mat-elevation-z8">
-    <div class="example-loading-shade"
+<div class="container mat-elevation-z8">
+    <div class="loading-shade"
          *ngIf="isLoadingResults">
       <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
     </div>
   
-    <div class="example-table-container">
-      <table mat-table [dataSource]="recipes" class="example-table">
+    <div class="table-container">
+      <table mat-table [dataSource]="recipes" class="table">
+
+        <!-- Checkbox Column -->
+        <ng-container matColumnDef="select">
+          <th mat-header-cell *matHeaderCellDef>
+            <mat-checkbox (change)="$event ? masterToggle() : null"
+                          [checked]="selection.hasValue() && isAllSelected()"
+                          [indeterminate]="selection.hasValue() && !isAllSelected()">
+            </mat-checkbox>
+          </th>
+          <td mat-cell *matCellDef="let row">
+            <mat-checkbox (click)="$event.stopPropagation()"
+                          (change)="$event ? selection.toggle(row) : null"
+                          [checked]="selection.isSelected(row)">
+            </mat-checkbox>
+          </td>
+        </ng-container>
+
         <!-- creator Column -->
         <ng-container matColumnDef="creator">
           <th mat-header-cell *matHeaderCellDef>Creator</th>
@@ -17,23 +34,34 @@
           <th mat-header-cell *matHeaderCellDef>Recipe name</th>
           <td mat-cell *matCellDef="let row">{{row.name}}</td>
         </ng-container>
-  
-        <!-- creation date -->
-        <ng-container matColumnDef="creation_date">
-          <th mat-header-cell *matHeaderCellDef>Creation date</th>
-          <td mat-cell *matCellDef="let row">{{row.creation_date | date}}</td>
-        </ng-container>
-  
+
         <!-- request count -->
         <ng-container matColumnDef="request_count">
           <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Request count</th>
           <td mat-cell *matCellDef="let row">{{row.request_count}}</td>
         </ng-container>
   
+        <!-- creation date -->
+        <ng-container matColumnDef="rating">
+          <th mat-header-cell *matHeaderCellDef>Rating</th>
+          <td mat-cell *matCellDef="let row">{{row.rating}}</td>
+        </ng-container>
+
+        <!-- creation date -->
+        <ng-container matColumnDef="creation_date">
+          <th mat-header-cell *matHeaderCellDef>Creation date</th>
+          <td mat-cell *matCellDef="let row">{{row.creation_date | date}}</td>
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+        (click)="selection.toggle(row)"></tr>
       </table>
     </div>
-  
     <mat-paginator [length]="resultsLength" [pageSize]="30"></mat-paginator>
-  </div>
+</div>
+<div>
+  <button class="delete_btn" mat-fab color="primary" (click)="deleteSelected()" [disabled]="!selection.hasValue()">
+    <mat-icon>delete</mat-icon>
+  </button>
+</div>
