--- a/AdminPage/src/app/recipe-list/recipe-list.component.html
+++ b/AdminPage/src/app/recipe-list/recipe-list.component.html
@@ -1,3 +1,9 @@
+<mat-card>
+  <mat-card-content>
+    <h2>Recipes</h2>
+  </mat-card-content>
+</mat-card>
+
 <div class="container mat-elevation-z8">
     <div class="filter-container">
       <mat-form-field class="form-field" appearance="standard">
