--- a/AdminPage/src/app/recipe-list/recipe-list.component.scss
+++ b/AdminPage/src/app/recipe-list/recipe-list.component.scss
@@ -1,3 +1,12 @@
+mat-card {
+  width: 80%;
+  margin: 10px auto;
+}
+
+mat-card mat-form-field {
+  display: block;
+}
+
 /* Structure */
 .container {
   position: relative;
