--- a/AdminPage/src/app/recipe-list/recipe-list.component.html
+++ b/AdminPage/src/app/recipe-list/recipe-list.component.html
@@ -39,7 +39,7 @@
     </div>
   
     <div class="table-container">
-      <table mat-table [dataSource]="recipes" class="table">
+      <table mat-table [dataSource]="recipes" class="table" multiTemplateDataRows>
 
         <!-- Checkbox Column -->
         <ng-container matColumnDef="select">
@@ -87,9 +87,25 @@
           <td mat-cell *matCellDef="let row">{{row.creation_date | date}}</td>
         </ng-container>
 
+
+        <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+        <ng-container matColumnDef="expandedDetail">
+          <td mat-cell *matCellDef="let row" [attr.colspan]="displayedColumns.length">
+            <div class="recipe-detail">
+              <div class="recipe-creator-id"> 
+                Creator ID : {{row.creator_id}} 
+              </div>
+              <div class="recipe-content">
+                Recipe : {{row.content}}
+              </div>
+            </div>
+          </td>
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"
         (click)="selection.toggle(row)"></tr>
+        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"></tr>
       </table>
     </div>
     <mat-paginator [length]="resultsLength" [pageSizeOptions]="pageSizeOptions"></mat-paginator>
