--- a/AdminPage/src/app/recipe-list/recipe-list.component.scss
+++ b/AdminPage/src/app/recipe-list/recipe-list.component.scss
@@ -7,6 +7,21 @@ mat-card mat-form-field {
   display: block;
 }
 
+.detail-row{
+  width: 80%;
+}
+
+.recipe-creator-id{
+  width: 20%;
+}
+
+.recipe-content{
+  width: 80%;
+}
+.recipe-detail{
+  display: flex;
+}
+
 /* Structure */
 .container {
   position: relative;
