admin user handling

--- a/AdminPage/src/app/control-panel/control-panel.component.html
+++ b/AdminPage/src/app/control-panel/control-panel.component.html
@@ -11,3 +11,4 @@
 </mat-toolbar>
 <app-recipe-list></app-recipe-list>
 <app-banned-users-list></app-banned-users-list>
+<app-admin-users></app-admin-users>
